...
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_time">Date:</string>
    <string name="search_location">Location:</string>
    <string name="search_keywords">Keyword:</string>
    <string name="location_button1">Top Left</string>
    <string name="location_button2">Bottom Right</string>
    <string name="search_go">Go</string>
    <string name="main_Snap">Snap</string>
    <string name="main_Search">Search</string>
    <string name="main_Settings">Settings</string>
    <string name="video_button">Video</string>

    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
...
